<resources>
    <string name="app_name">My Super Calculator</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>


    <string name="sin">sin()</string>
    <string name="cos">cos()</string>
    <string name="tan">tan()</string>
    <string name="naturalLog">ln</string>
    <string name="log10">log</string>
    <string name="squareRoot">√</string>
    <string name="cubicRoot">3√</string>
    <string name="Pi">π</string>
    <string name="square">x²</string>
    <string name="cube">x³</string>
    <string name="Inx">1/x</string>
    <string name="powerXonY">x^y</string>
    <string name="poweron2">2^x</string>
    <string name="eular">e</string>
    <string name="factorial">!</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>

    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="equalsto">=</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="modulus">%</string>
    <string name="brackets">()</string>

    <string name="clearHistory">CLEAR HISTORY</string>

    <string name="clear">AC</string>
    <string name="errorMsg">Error</string>
    <string name="tryAgain">Try Again</string>

    <string name="speech_prompt">Say Something</string>
    <string name="speech_not_supported">Sorry Your device does\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="equation">Equation</string>
    <string name="result">Result</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="date">01/01/2022</string>
    <string name="ageResult">0 Years | 0 Months | 0 Days</string>

    <string name="calculate">CALCULATE</string>

    <string name="adUnitId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial">ca-app-pub-3940256099942544/1033173712</string>


    <string name="hint_principal">Principal Amount ₹</string>
    <string name="hint_interest">Interest rate per Year %</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI ₹</string>
    <string name="hint_interest_total">Total Interest for Loan ₹</string>

</resources>
