<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EmiCalculator">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">


            <EditText
                android:id="@+id/principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/border"
                android:digits="0123456789."
                android:gravity="center"
                android:hint="@string/hint_principal"
                android:inputType="number"
                android:padding="15dp"
                android:singleLine="true"
                tools:ignore="Autofill" />


            <EditText
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/border"
                android:digits="0123456789."
                android:gravity="center"
                android:hint="@string/hint_interest"
                android:inputType="number"
                android:padding="15dp"
                android:singleLine="true"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:digits="0123456789."
                android:gravity="center"
                android:hint="@string/hint_years"
                android:inputType="number"
                android:padding="15dp"
                tools:ignore="Autofill" />


            <Button
                android:id="@+id/btn_calculate2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:background="@drawable/border"
                android:text="Calculate"
                android:textColor="@android:color/black"
                tools:ignore="HardcodedText" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="35dp"
                android:background="#FF0000FF" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxEms="0"
                android:text="@string/hint_emi"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/emi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border1"
                android:gravity="center"
                android:hint="₹"
                android:inputType="number"
                android:maxEms="0"
                android:padding="15dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:inputType="number"
                android:maxEms="0"
                android:text="@string/hint_interest_total"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/interest_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border1"
                android:gravity="center"
                android:hint="₹"
                android:inputType="number"
                android:padding="15dp"
                tools:ignore="Autofill" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

